--- a/force-app/main/default/aura/VisitIconsSection/VisitIconsSection.cmp
+++ b/force-app/main/default/aura/VisitIconsSection/VisitIconsSection.cmp
@@ -9,6 +9,8 @@
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
+    <aura:method name="reset" action="{!c.doInit}" access="public"/>
+
     <div class="section">
         <p style="padding: 10px">Visit Icons</p>
         <div class="icons-container">
