--- a/force-app/main/default/aura/Action_EditVisit/Action_EditVisit.cmp
+++ b/force-app/main/default/aura/Action_EditVisit/Action_EditVisit.cmp
@@ -4,8 +4,7 @@
 
 <aura:component description="Action_EditVisit">
 
-    <aura:attribute name="isVisible" type="Boolean"/>
-    <aura:attribute name="visit" type="Object"/>
+    <aura:attribute name="visit" type="Object" default="{}"/>
     <aura:attribute name="icons" type="List"/>
     <aura:attribute name="callback" type="Object"/>
     <aura:attribute name="cancelCallback" type="Object"/>
@@ -16,36 +15,34 @@
         <aura:attribute name="cancelCallback" type="Function"/>
     </aura:method>
 
-    <aura:if isTrue="{!v.isVisible}">
-        <c:uiModal aura:id="modal" size="medium" headerText="{!$Label.c.Visit_b_Add_Visit}">
-            <div>
-                <div class="slds-grid slds-gutters">
-                    <div class="slds-col slds-size--1-of-2">
-                        <lightning:input type="text" label="Visit Name" value="{!v.visit.Name}"/>
-                    </div>
-                    <div class="slds-col slds-size--1-of-2">
-                        <lightning:input type="text" label="Patient Portal Name"
-                                         value="{!v.visit.Patient_Portal_Name__c}"/>
-                    </div>
+    <c:uiModal aura:id="modal" size="medium" headerText="{!$Label.c.Visit_b_Add_Visit}">
+        <div>
+            <div class="slds-grid slds-gutters">
+                <div class="slds-col slds-size--1-of-2">
+                    <lightning:input type="text" label="Visit Name" value="{!v.visit.Name}"/>
                 </div>
-                <div class="slds-grid slds-gutters">
-                    <div class="slds-col slds-size--1-of-2">
-                        <lightning:input type="text" label="Visit Schedule" value="{!v.visit.Visit_Schedule__c}"/>
-                    </div>
-                    <div class="slds-col slds-size--1-of-2">
-                        <lightning:input type="number" label="Visit Number" value="{!v.visit.Visit_Number__c}"/>
-                    </div>
+                <div class="slds-col slds-size--1-of-2">
+                    <lightning:input type="text" label="Patient Portal Name"
+                                     value="{!v.visit.Patient_Portal_Name__c}"/>
                 </div>
-                <c:VisitIconsSection icons="{!v.icons}" visit="{!v.visit}"/>
             </div>
-            <aura:set attribute="footer">
-                <lightning:button variant="neutral" type="button" label="{!$Label.c.Visit_b_Close}"
-                                  onclick="{!c.cancelClick}"/>
-                <lightning:button variant="brand" type="button" label="{!$Label.c.Visit_b_Save}"
-                                  disabled="{!or(empty(v.visit.Name), empty(v.visit.Icons__c))}"
-                                  onclick="{!c.saveVisit}"/>
-            </aura:set>
-        </c:uiModal>
-    </aura:if>
+            <div class="slds-grid slds-gutters">
+                <div class="slds-col slds-size--1-of-2">
+                    <lightning:input type="text" label="Visit Schedule" value="{!v.visit.Visit_Schedule__c}"/>
+                </div>
+                <div class="slds-col slds-size--1-of-2">
+                    <lightning:input type="number" label="Visit Number" value="{!v.visit.Visit_Number__c}"/>
+                </div>
+            </div>
+            <c:VisitIconsSection aura:id="iconsSet" icons="{!v.icons}" visit="{!v.visit}"/>
+        </div>
+        <aura:set attribute="footer">
+            <lightning:button variant="neutral" type="button" label="{!$Label.c.BTN_Cancel}"
+                              onclick="{!c.cancelClick}"/>
+            <lightning:button variant="brand" type="button" label="{!$Label.c.Visit_b_Save}"
+                              disabled="{!or(empty(v.visit.Name), empty(v.visit.Icons__c))}"
+                              onclick="{!c.saveVisit}"/>
+        </aura:set>
+    </c:uiModal>
 
 </aura:component>
