--- a/force-app/main/default/aura/Action_EditVisitPlan/Action_EditVisitPlan.css
+++ b/force-app/main/default/aura/Action_EditVisitPlan/Action_EditVisitPlan.css
@@ -1,6 +1,11 @@
 /**
  * Created by Leonid Bartenev
  */
+.THIS .edit-vp-container{
+    min-height: 180px;
+    position: relative;
+}
+
 .THIS .toolbar{
     display: flex;
     justify-content: space-between;
