--- a/force-app/main/ui-common/aura/uiModal/uiModal.cmp
+++ b/force-app/main/ui-common/aura/uiModal/uiModal.cmp
@@ -24,7 +24,7 @@
                                       class="slds-modal__close"
                                       iconName="utility:close"
                                       variant="bare-inverse"
-                                      onclick="{!c.doCancel}"/>
+                                      onclick="{!c.doCancel}" size="large"/>
                 <h2 class="slds-modal__title slds-text-heading_medium slds-hyphenate">{!v.headerText}</h2>
             </header>
             <div class="slds-modal__content slds-p-around_medium">
