--- a/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.cmp
+++ b/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.cmp
@@ -15,9 +15,15 @@
             <div>{!v.plan.label}</div>
         </ui:menuTriggerLink>
         <ui:menuList aura:id="actionMenu" class="menu-popup">
-            <c:uiMenuItem label="Edit" onclick="{!c.doEditSelected}"/>
-            <c:uiMenuItem label="Clone" onclick="{!c.doCloneSelected}"/>
-            <c:uiMenuItem label="Delete" onclick="{!c.doDeleteSelected}"/>
+            <c:uiMenuItem label="Edit" onclick="{!c.doEditSelected}">
+                <lightning:icon iconName="utility:edit" size="x-small"/>Edit
+            </c:uiMenuItem>
+            <c:uiMenuItem label="Clone" onclick="{!c.doCloneSelected}">
+                <lightning:icon iconName="utility:copy" size="x-small"/>Clone
+            </c:uiMenuItem>
+            <c:uiMenuItem label="Delete" onclick="{!c.doDeleteSelected}">
+                <lightning:icon iconName="utility:close" size="x-small"/>Remove
+            </c:uiMenuItem>
         </ui:menuList>
     </ui:menu>
 
