--- a/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.css
+++ b/force-app/main/default/aura/VisitPlanColumnMenu/VisitPlanColumnMenu.css
@@ -3,15 +3,23 @@
  */
 
 .THIS .menu-popup{
-    left: 31px;
+    left: 0;
     transform: none;
 }
 
 .THIS .menu-popup li{
-    padding: 0 5px;
+    font-weight: normal;
+}
+
+.THIS .menu-popup li{
+    padding: 8px 5px;
     cursor: pointer;
 }
 
 .THIS .menu-popup li:hover{
     background-color: #f2f7ff;
+}
+
+.THIS .menu-popup li .slds-icon_container{
+    margin: 0 6px 0 4px;
 }
