--- a/force-app/main/default/aura/Action_EditVisit/Action_EditVisit.cmp
+++ b/force-app/main/default/aura/Action_EditVisit/Action_EditVisit.cmp
@@ -6,6 +6,7 @@
 
     <aura:attribute name="visit" type="Object" default="{}"/>
     <aura:attribute name="icons" type="List"/>
+    <aura:attribute name="mode" type="String"/>
     <aura:attribute name="callback" type="Object"/>
     <aura:attribute name="cancelCallback" type="Object"/>
 
@@ -15,7 +16,7 @@
         <aura:attribute name="cancelCallback" type="Function"/>
     </aura:method>
 
-    <c:uiModal aura:id="modal" size="medium" headerText="{!$Label.c.Visit_b_Add_Visit}">
+    <c:uiModal aura:id="modal" size="medium" headerText="{!if(v.mode == 'new', 'Add Visit', 'Edit Visit')}">
         <div>
             <div class="slds-grid slds-gutters">
                 <div class="slds-col slds-size--1-of-2">
@@ -39,7 +40,7 @@
         <aura:set attribute="footer">
             <lightning:button variant="neutral" type="button" label="{!$Label.c.BTN_Cancel}"
                               onclick="{!c.cancelClick}"/>
-            <lightning:button variant="brand" type="button" label="{!$Label.c.Visit_b_Save}"
+            <lightning:button variant="brand" type="button" label="Add Visit"
                               disabled="{!or(empty(v.visit.Name), empty(v.visit.Icons__c))}"
                               onclick="{!c.saveVisit}"/>
         </aura:set>
