--- a/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
@@ -47,6 +47,10 @@
                 <behavior>Edit</behavior>
                 <field>MRR_Survey_Results_URL__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Visit_Plan__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
