--- a/force-app/main/default/aura/VisitIconsSection/VisitIconsSection.css
+++ b/force-app/main/default/aura/VisitIconsSection/VisitIconsSection.css
@@ -5,7 +5,8 @@
 .THIS.section {
     margin-top: 15px;
     border: 1px solid #e8e6e6;
-    border-radius: 5px;;
+    border-radius: 5px;
+    height: 100%;
 }
 
 .THIS .icons-container {
