--- a/force-app/main/default/aura/Action_EditIconLegend/Action_EditIconLegend.css
+++ b/force-app/main/default/aura/Action_EditIconLegend/Action_EditIconLegend.css
@@ -4,3 +4,11 @@
 .THIS .slds-modal__content{
     height: 100%!important;
 }
+
+.THIS .icon-col{
+    padding-top: 10px;
+}
+
+.THIS .slds-form-element label{
+    display: none;
+}
