--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -527,7 +527,7 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_State}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingState}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="false"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Country}</label>
