REF-551, REF-552, REF-554 fixes
REF-551, REF-552, REF-554 fixes

--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -485,7 +485,7 @@
                                     <apex:inputField styleClass="slds-input slds-combobox__input" value="{!contact.Salutation}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1  {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_First_name}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_First_name}</label>
                                     <input class="slds-input" type="text" value="{!contact.FirstName}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.FirstName}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
@@ -494,7 +494,7 @@
                                     <input class="slds-input" type="text" value="{!contact.MiddleName}"></input>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Last_name}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Last_name}</label>
                                     <input class="slds-input" type="text" value="{!contact.LastName}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.LastName}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
@@ -506,12 +506,12 @@
 
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Name}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Name}</label>
                                     <input class="slds-input" type="text" value="{!account.Name}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!account.Name}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element  slds-col slds-size_1-of-1 slds-medium-size_2-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Address_Line}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Address_Line}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingStreet}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingStreet}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
@@ -520,27 +520,27 @@
                                 <!--<input class="slds-input" type="text" value="" disabled="true"></input>-->
                                 <!--</div>-->
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_City}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_City}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingCity}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCity}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_State}</label>
+                                    <label>{!$Label.PG_AS_F_Institute_State}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingState}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="false"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Country}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Country}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingCountry}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Zip_Postal_Code}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Zip_Postal_Code}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingPostalCode}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingPostalCode}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
-                                    <label><abbr title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</abbr>{!$Label.PG_AS_F_Institute_Phone_Number}</label>
+                                    <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Phone_Number}</label>
                                     <input class="slds-input" type="text" value="{!account.Phone}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.Phone}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
                                 </div>
