--- a/force-app/main/default/aura/DashboardPhysWaitingForApprovalList/DashboardPhysWaitingForApprovalList.cmp
+++ b/force-app/main/default/aura/DashboardPhysWaitingForApprovalList/DashboardPhysWaitingForApprovalList.cmp
@@ -13,8 +13,8 @@
         <div class="db-list-item">
             <div class="rr-small-down-hide">
                 <button class="apollo-btn tertiary green"
-                        disabled="{!item.actions.disabled}"
-                        title="{!item.actions.disableReason}"
+                        disabled="{!item.action.disabled}"
+                        title="{!item.action.disableReason}"
                         onclick="{!c.doAction}"
                         data-hcpe-id="{!item.data.Id}">
                     {!item.action.label}
@@ -25,8 +25,8 @@
             <span class="list-item-site-name">{!item.data.Study_Site__r.Name}</span>
             <div class="rr-small-up-hide btn-block">
                 <button class="apollo-btn tertiary"
-                        disabled="{!item.actions.disabled}"
-                        title="{!item.actions.disableReason}"
+                        disabled="{!item.action.disabled}"
+                        title="{!item.action.disableReason}"
                         onclick="{!c.doAction}"
                         data-hcpe-id="{!item.data.Id}">
                     {!item.action.label}
